Adição de documentação e alteração do email do bot.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             
             <h2>Contate-nos</h2>
             <p>
-                Em caso de dúvidas, favor entrar em contato no seguinte email: <a href="mailto:asyrobot@cefetmg.com.br">asyrobot@cefetmg.com.br</a>.
+                Em caso de dúvidas, favor entrar em contato no seguinte email: <a href="mailto:asyrobot@hotmail.com">asyrobot@hotmail.com</a>.
             </p>
         </div>
     </div>
